Add wikipedia importing functionality

--- a/languages/en.json
+++ b/languages/en.json
@@ -1,3 +1,11 @@
 {
-    "MODULE.hello": "hello"
+    "wiki-import.buttonTitle": "Wikipedia importer",
+    "wiki-import.buttonLabel": "Wiki",
+    "wiki-import.dialogTitle": "Wikipedia import",
+    "wiki-import.dialog.wikiArticleUrl": "Wiki article url:",
+    "wiki-import.dialog.pasteSource": "OR paste the source:",
+    "wiki-import.dialog.wikiSource": "Wiki source:",
+    "wiki-import.dialog.wikiDomain": "Wiki domain(default: wikipedia.org):",
+    "wiki-import.import": "Import",
+    "wiki-import.fetchError": "Error while downloading requested page. Possibly due to CORS issue."
 }
