--- a/languages/pl.json
+++ b/languages/pl.json
@@ -2,10 +2,13 @@
     "wiki-import.buttonTitle": "Importer z wikipedii",
     "wiki-import.buttonLabel": "Wiki",
     "wiki-import.dialogTitle": "Import z wikipedii",
+    "wiki-import.dialog.downloadFromUrl": "Pobierz artykuł z urla:",
     "wiki-import.dialog.wikiArticleUrl": "Url artykułu wiki:",
     "wiki-import.dialog.pasteSource": "LUB wklej źródło:",
     "wiki-import.dialog.wikiSource": "Źródło:",
     "wiki-import.dialog.wikiDomain": "Domena wiki(domyślnie: wikipedia.org):",
     "wiki-import.import": "Importuj",
-    "wiki-import.fetchError": "Błąd przy pobieraniu strony. Prawdopodobnie problem z CORSem."
+    "wiki-import.fetchError": "Błąd przy pobieraniu strony. Prawdopodobnie problem z CORSem.",
+    "wiki-import.settings.infoboxes.name": "Dodatkowe infoboxy",
+    "wiki-import.settings.infoboxes.hint": "Podaj wszystkie dodatkowe infoboxy, które chcesz wspierać rozdzielone przy pomocy `;`."
 }
