--- a/languages/pl.json
+++ b/languages/pl.json
@@ -14,8 +14,10 @@
     "wiki-import.progress.startFetch": "Pobieranie strony...",
     "wiki-import.progress.startConvert": "Importowanie strony...",
     "wiki-import.progress.complete": "Strona zaimportowana!",
-    "wiki-import.quickInstert.reindexStart`": "Indeksowanie kompendiów...",
-    "wiki-import.quickInstert.reindexComplete`": "Kompendia zaindeksowane.",
+    "wiki-import.quickInstert.reindexStart": "Indeksowanie kompendiów...",
+    "wiki-import.quickInstert.reindexComplete": "Kompendia zaindeksowane.",
     "wiki-import.settings.downloadImages.name": "Pobieraj obrazy",
-    "wiki-import.settings.downloadImages.hint": "Po włączeniu obrazy będą pobierane do lokalnego folderu. W wypadku porażki, np. z powodu CORSów, zachowa się jakby ta opcja była wyłączona."
+    "wiki-import.settings.downloadImages.hint": "Po włączeniu obrazy będą pobierane do lokalnego folderu. W wypadku porażki, np. z powodu CORSów, zachowa się jakby ta opcja była wyłączona.",
+    "wiki-import.settings.useQuickInsert.name": "Używaj quick-insert",
+    "wiki-import.settings.useQuickInsert.hint": "Po włączeniu wyszukiwarka quick-insert będzie wykorzystywana by linkować importowane wpisy do kompendiów. Z powodu dużej ilości sprawdzanych linków bywa to dość powolne."
 }
