Add better notes about CORS, authentication etc. Fix #4

--- a/languages/en.json
+++ b/languages/en.json
@@ -5,6 +5,9 @@
     "wiki-import.dialog.downloadFromUrl": "Download article from url:",
     "wiki-import.dialog.wikiArticleUrl": "Wiki article url:",
     "wiki-import.dialog.pasteSource": "OR paste the source:",
+    "wiki-import.dialog.corsNote": "The fields below will not work if wiki article URL is entered. Please leave that field empty if you want to import the source. Please use this if your wiki is behind CORS and/or authentication.",
+    "wiki-import.dialog.moreOnCors": "More on CORS.",
+    "wiki-import.dialog.authenticationNote": "Note: wiki sites with authentication are not supported.",
     "wiki-import.dialog.wikiSource": "Wiki source:",
     "wiki-import.dialog.wikiDomain": "Wiki domain(default: wikipedia.org):",
     "wiki-import.import": "Import",
