--- a/languages/pl.json
+++ b/languages/pl.json
@@ -5,6 +5,9 @@
     "wiki-import.dialog.downloadFromUrl": "Pobierz artykuł z urla:",
     "wiki-import.dialog.wikiArticleUrl": "Url artykułu wiki:",
     "wiki-import.dialog.pasteSource": "LUB wklej źródło:",
+    "wiki-import.dialog.corsNote": "Pola poniżej nie zadziałają jeśli pole Url artykułu wiki jest uzupełnione. Możesz użyć funkcjonalności poniżej jeśli Twoja wiki używa autoryzacji lub jest za CORSem.",
+    "wiki-import.dialog.moreOnCors": "Więcej o CORS.",
+    "wiki-import.dialog.authenticationNote": "Uwaga: strony wiki z autoryzacją nie są wspierane.",
     "wiki-import.dialog.wikiSource": "Źródło:",
     "wiki-import.dialog.wikiDomain": "Domena wiki(domyślnie: wikipedia.org):",
     "wiki-import.import": "Importuj",
