Update for foundry v10. Add link replacer.

--- a/languages/en.json
+++ b/languages/en.json
@@ -9,11 +9,16 @@
     "wiki-import.dialog.moreOnCors": "More on CORS.",
     "wiki-import.dialog.authenticationNote": "Note: wiki sites with authentication are not supported.",
     "wiki-import.dialog.wikiSource": "Wiki source:",
+    "wiki-import.dialog.wikiTitle": "Article title(optional):",
     "wiki-import.dialog.wikiDomain": "Wiki domain(default: wikipedia.org):",
     "wiki-import.import": "Import",
     "wiki-import.fetchError": "Error while downloading requested page. Possibly due to CORS issue.",
     "wiki-import.settings.infoboxes.name": "Additional infoboxes",
     "wiki-import.settings.infoboxes.hint": "List all additional infobox template names you want to parse delimited by `;` character.",
+    "wiki-import.settings.linkReplacerInput.name": "Link replacer input",
+    "wiki-import.settings.linkReplacerInput.hint": "Search string to replace in wikipedia links. For example if your links contain text like Some_Cool_Article/Legends and you want to replace /Legends with something else type /Legend in this field.",
+    "wiki-import.settings.linkReplacerOutput.name": "Link replacer replacement text",
+    "wiki-import.settings.linkReplacerOutput.hint": "If you entered something in the previous field the contents of this field will be input instead. Leave empty to just remove the original text. If you type /Fables here it will replace /Legends with /Fables.",
     "wiki-import.progress.startFetch": "Downloading wikipedia page...",
     "wiki-import.progress.startConvert": "Importing wikipedia page...",
     "wiki-import.progress.complete": "Wiki page imported!",
