--- a/languages/pl.json
+++ b/languages/pl.json
@@ -9,11 +9,16 @@
     "wiki-import.dialog.moreOnCors": "Więcej o CORS.",
     "wiki-import.dialog.authenticationNote": "Uwaga: strony wiki z autoryzacją nie są wspierane.",
     "wiki-import.dialog.wikiSource": "Źródło:",
+    "wiki-import.dialog.wikiTitle": "Tytuł artykułu(opcjonalny):",
     "wiki-import.dialog.wikiDomain": "Domena wiki(domyślnie: wikipedia.org):",
     "wiki-import.import": "Importuj",
     "wiki-import.fetchError": "Błąd przy pobieraniu strony. Prawdopodobnie problem z CORSem.",
     "wiki-import.settings.infoboxes.name": "Dodatkowe infoboxy",
     "wiki-import.settings.infoboxes.hint": "Podaj wszystkie dodatkowe infoboxy, które chcesz wspierać rozdzielone przy pomocy `;`.",
+    "wiki-import.settings.linkReplacerInput.name": "Tekst do zmiany w linkach",
+    "wiki-import.settings.linkReplacerInput.hint": "Tekst do zmiany w linkach. Jeśli Twoje linki mają Tytul_Artykulu/Legends, a Ty chcesz zmienić /Legends w coś innego wpisz tutaj /Legends.",
+    "wiki-import.settings.linkReplacerOutput.name": "Tekst docelowy w linkach",
+    "wiki-import.settings.linkReplacerOutput.hint": "Jeśli wpisałeś coś w poprzednim polu, zawartość tego pola zostanie użyta do podmiany. Np. wpisując tutaj /Fables zmienisz /Legends w /Fables. Pozostaw pole puste by po prostu usunąć oryginalny tekst.",
     "wiki-import.progress.startFetch": "Pobieranie strony...",
     "wiki-import.progress.startConvert": "Importowanie strony...",
     "wiki-import.progress.complete": "Strona zaimportowana!",
